src/test/ui/issues/issue-54302.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'de` due to conflicting requirements
  --> $DIR/issue-54302.rs:13:5
   |
LL |     assert_deserialize_owned::<&'static str>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U2, name: BrNamed(crate0:DefIndex(1:12), 'de) })...
   = note: ...but the lifetime must also be valid for the static lifetime...
   = note: ...so that the types are compatible:
           expected Deserialize<'de>
              found Deserialize<'_>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
